WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272312
Fix !ENABLE(JIT) && ENABLE(WEBASSEMBLY) build after
277125@main
https://bugs.webkit.org/show_bug.cgi?id=272312
Summary
Fix !ENABLE(JIT) && ENABLE(WEBASSEMBLY) build after 277125@main
Ross Kirsling
Reported
2024-04-07 19:34:24 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2024-04-07 19:36:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26963
EWS
Comment 2
2024-04-07 21:20:49 PDT
Committed
277189@main
(e437c19ce328): <
https://commits.webkit.org/277189@main
> Reviewed commits have been landed. Closing PR #26963 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-04-07 21:21:13 PDT
<
rdar://problem/126058297
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug