Fix !ENABLE(JIT) && ENABLE(WEBASSEMBLY) build after 277125@main https://bugs.webkit.org/show_bug.cgi?id=272312

Unreviewed build fix.

* Source/JavaScriptCore/wasm/WasmCallee.cpp:
* Source/JavaScriptCore/wasm/WasmCallee.h:
Ensure JSEntrypointCallee extends from JITCallee even with !ENABLE(JIT).

* Source/JavaScriptCore/wasm/WasmLLIntPlan.cpp:
Ensure CCallHelpers usage is guarded by ENABLE(JIT).

Canonical link: https://commits.webkit.org/277189@main